2006-02-28  Lars Hecking  <lhecking@users.sourceforge.net>

	* demo/Makefile.am.in: Add *.pdb and *.r3d to EXTRA_DIST generation.

	* docs/gnuplot.texi: Regenerated after recent documentation updates.

2006-02-28  Per Persson  <persquare@mac.com>

	* term/aquaterm.trm: Added encoding support to aqua terminal. Currently 
	supports iso_latin_1, iso_latin2, and cp1250. Default is iso_latin_1.

2006-02-27  Bastian Maerkisch  <bmaerkisch@web.de>

	SF patch [1436005] WIN: change sequence of pointstyles

	* src/win/wgnuplib.h src/win/wgraph.c: Change the sequence of poinstyle
	symbols such that it matches the sequence of terminals like postscript
	or gd.

2006-02-26  Ethan A Merritt  <merritt@u.washington.edu>

	* demo/html/index.save: Update web site template for 4.1 demos.

	* src/set.c(set_decimalsign) src/variable.c(locale_handler)
	src/show.c(show_command show_decimalsign show_locale) docs/gnuplot.doc:
	Work a little harder to show both the current input and output settings
	for decimal point handling (LC_NUMERIC locale setting).

2006-02-25  Ethan A Merritt  <merritt@u.washington.edu>

	* graph3d.c (do_3dplot): Contour lines are supposed to be in different
	colors, but this was only working if the surface itself was drawn in a
	simple linetype.  Fix contour auto-coloring even for explicit rgb or
	other surface-coloring modes.

2006-02-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.h src/term_api.h:  Move line type definitions into
	term_api.h, since they exist to request specific terminal behavior.
	Remove definition of L_TYPE_NODRAW. It is now superseded by LT_NODRAW.

	* src/misc.c (parse_colorspec);  Now that LT_BACKGROUND is safe to pass
	to all terminal drivers, allow it as a legal linetype (-3) in commands.

2006-02-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/tables.c (set_palette_tbl pm3d_color_names_tbl): Support both
	spellings of "gray" and "grey".

2006-02-23  Shigeharu Takeno  <shige@iee.niit.ac.jp>
